# unimrcp_with_huaweicloud_asr

./: CMakeLists.txt  README.md  configure.ac
conf/: Makefile.am  asr_info.conf  unimrcpclient.xml  unimrcpserver.xml
data/: Makefile.am
docs/: mainpage.docs
plugins/: Makefile.am
plugins/huawei-recog/: CMakeLists.txt  Makefile.am  huaweirecog.vcxproj
plugins/huawei-recog/huaweicloud_asr/: README  RasrDemo.cpp
plugins/huawei-recog/huaweicloud_asr/include/: AuthInfo.h  AuthUtil.h  Hasher.h  Header.h  HttpConfig.h  RasrClient.h  RasrListener.h  RasrRequest.h  RequestParams.h  Signer.h  Utils.h  WebsocketClient.h  WebsocketService.h
plugins/huawei-recog/src/: huawei_recog_engine.cc
unimrcp-deps-1.6.0/: CHANGES-deps  README-deps
unimrcp-deps-1.6.0/libs/apr/: build-outputs.mk  configure
unimrcp-deps-1.6.0/libs/apr-util/: configure
unimrcp-deps-1.6.0/libs/sofia-sip/: Makefile.in  configure
unimrcp-deps-1.6.0/libs/sofia-sip/autom4te.cache/: output.1  traces.0  traces.1
unimrcp-deps-1.6.0/libs/sofia-sip/libsofia-sip-ua/: Makefile.in
unimrcp-deps-1.6.0/libs/sofia-sip/libsofia-sip-ua-glib/: Makefile.in
unimrcp-deps-1.6.0/libs/sofia-sip/libsofia-sip-ua-glib/su-glib/: Makefile.in
unimrcp-deps-1.6.0/libs/sofia-sip/libsofia-sip-ua/bnf/: Makefile.in
unimrcp-deps-1.6.0/libs/sofia-sip/libsofia-sip-ua/docs/: Makefile.in
unimrcp-deps-1.6.0/libs/sofia-sip/libsofia-sip-ua/features/: Makefile.in
unimrcp-deps-1.6.0/libs/sofia-sip/libsofia-sip-ua/http/: Makefile.in
unimrcp-deps-1.6.0/libs/sofia-sip/libsofia-sip-ua/ipt/: Makefile.in
unimrcp-deps-1.6.0/libs/sofia-sip/libsofia-sip-ua/iptsec/: Makefile.in
unimrcp-deps-1.6.0/libs/sofia-sip/libsofia-sip-ua/msg/: Makefile.in
unimrcp-deps-1.6.0/libs/sofia-sip/libsofia-sip-ua/nea/: Makefile.in
unimrcp-deps-1.6.0/libs/sofia-sip/libsofia-sip-ua/nta/: Makefile.in
unimrcp-deps-1.6.0/libs/sofia-sip/libsofia-sip-ua/nth/: Makefile.in
unimrcp-deps-1.6.0/libs/sofia-sip/libsofia-sip-ua/nua/: Makefile.in
unimrcp-deps-1.6.0/libs/sofia-sip/libsofia-sip-ua/sdp/: Makefile.in
unimrcp-deps-1.6.0/libs/sofia-sip/libsofia-sip-ua/sip/: Makefile.in
unimrcp-deps-1.6.0/libs/sofia-sip/libsofia-sip-ua/soa/: Makefile.in
unimrcp-deps-1.6.0/libs/sofia-sip/libsofia-sip-ua/sresolv/: Makefile.in
unimrcp-deps-1.6.0/libs/sofia-sip/libsofia-sip-ua/stun/: Makefile.in
unimrcp-deps-1.6.0/libs/sofia-sip/libsofia-sip-ua/su/: Makefile.in
unimrcp-deps-1.6.0/libs/sofia-sip/libsofia-sip-ua/tport/: Makefile.in
unimrcp-deps-1.6.0/libs/sofia-sip/libsofia-sip-ua/url/: Makefile.in
unimrcp-deps-1.6.0/libs/sofia-sip/open_c/: Makefile.in
unimrcp-deps-1.6.0/libs/sofia-sip/s2check/: Makefile.in
unimrcp-deps-1.6.0/libs/sofia-sip/tests/: Makefile.in
unimrcp-deps-1.6.0/libs/sofia-sip/utils/: Makefile.in
unimrcp-deps-1.6.0/libs/sofia-sip/win32/: Makefile.in
